feat ( mainBackend ): build

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.0.1",
     "description": "app test",
     "scripts": {
-        "start": "concurrently \"cd frontend && PORT=3000 npm start\" \"cd server && PORT=3001 npm start\""
+        "start": "concurrently \"cd frontend-list && PORT=3000 npm start\" \"cd backend && PORT=3001 npm  start\"",
+        "start:prod": "cd backend && npm start",
+        "build": "cd frontend-list&& npm run build && mv build ../backend/public"
     },
     "dependencies": {
         "concurrently": "^4.1.1"
