--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "description": "app test",
     "scripts": {
-        "install": "concurrently \"cd frontend &&  npm install\" \"cd backend &&  npm  install\"",
+        "postinstall": "concurrently \"cd frontend &&  npm install\" \"cd backend &&  npm  install\"",
         "start": "concurrently \"cd frontend && PORT=3000 npm start\" \"cd backend && PORT=3001 npm  start\"",
         "start:prod": "cd backend && npm start",
         "build": "cd frontend && npm run build && mv build ../backend/public"
